--- a/src/ui/css/_variables.css
+++ b/src/ui/css/_variables.css
@@ -7,21 +7,23 @@ html {
 
 	--c-white: #fff;
 	--c-black: #111;
-	--c-grey-light: hsl(249 10% 90%);
-	--c-grey-lighter: hsl(249 10% 95%);
+	--c-interactive-dark: hsl(221 85% 26%);
+	--c-interactive-light: hsl(221 85% 50%);
+	--c-grey-light: hsl(249 10% 95%);
+	--c-grey-lighter: hsl(249 10% 100%);
 	--c-grey-dark: hsl(247 10% 60%);
-	--c-blue-dark: hsl(221 85% 26%);
-	--c-blue-light: hsl(221 85% 50%);
-	--c-blue-lighter: hsl(221 85% 60%);
+	--c-blue-dark: hsl(221 100% 55%);
+	--c-blue-light: hsl(221 100% 70%);
+	--c-blue-lighter: hsl(221 100% 75%);
 	--c-yellow-dark: hsl(45 98% 40%);
 	--c-yellow-light: hsl(45 98% 59%);
 	--c-yellow-lighter: hsl(45 98% 70%);
-	--c-red-dark: hsl(9 94% 33%);
-	--c-red-light: hsl(9 94% 45%);
-	--c-red-lighter: hsl(9 94% 53%);
-	--c-green-dark: hsl(145 94% 15%);
-	--c-green-light: hsl(145 94% 30%);
-	--c-green-lighter: hsl(145 94% 35%);
+	--c-red-dark: hsl(9 94% 39%);
+	--c-red-light: hsl(9 94% 53%);
+	--c-red-lighter: hsl(9 94% 60%);
+	--c-green-dark: hsl(145 94% 30%);
+	--c-green-light: hsl(145 94% 41%);
+	--c-green-lighter: hsl(145 94% 47%);
 
 	--c-seal-gold: hsl(36 57% 66%);
 	--c-seal-red: hsl(3 82% 61%);
